# sf-apartment-aggregator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: repo-checks.yml
docs/: README.md  spec.md
ops/: com.nickltang.sf-apartment-aggregator.awake.plist  com.nickltang.sf-apartment-aggregator.poll.plist
scripts/: install_launchd_awake.sh  install_launchd_poll.sh  run_daytime_caffeinate.sh  run_poll.sh
sf_apartment_aggregator/: __init__.py  cli.py  config.py  dashboard.py  filters.py  logging_config.py  models.py  normalize.py  notifier.py  pipeline.py  repository.py
sf_apartment_aggregator/adapters/: __init__.py  api_sources.py  base.py  browser_craigslist.py  html_sources.py  rss.py
sf_apartment_aggregator/dashboard_static/: app.jsx  index.html
tests/: conftest.py  test_adapters.py  test_api_sources.py  test_cli.py  test_config.py  test_dashboard_api.py  test_filters.py  test_normalize.py  test_pipeline_integration.py  test_repository.py
tests/fixtures/: rentsfnow.html  rss.xml
